# vllm-optimization-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
apptainer/: grafana.def
configs/: matrix.yaml  quality_prompts.txt  workloads.yaml
notebooks/: analysis.ipynb
results/L40S/: RESULTS.md  quality.json  runs.parquet
results/L40S/rows/: 006743429cb5b649.json  01bce5ef03b67be0.json  0325f98eb40142dc.json  0ed03c0611d1511d.json  0f11f881dfd06d57.json  108b8f962f14ad71.json  120b735a5bb120db.json  14f84a3dfb9d7353.json  1bd4286ec8c0f943.json  22788206031a0304.json  230c0719ec13ffa3.json  23e63960c79645c5.json  2571a3f17dcb491f.json  2a93d277d3260ff7.json  2d834681afcd5490.json  2d884db0395d40ac.json  318c6e4bbc9e12d4.json  31cc4e0933270b54.json  381cefa9c2a5764f.json  44180cf7fcba96e9.json  4469f815af1b5c58.json  49f55814ed7093f3.json  4cf41b049d3bc7ce.json  4d43606d0a41f0d6.json  560103bf887c98f4.json  5902c893481a97de.json  64fcf9df12378b5f.json  65a7929f9cdbdf98.json  66cb0eafaaf3bcc5.json  68030844e9400b41.json  6b24733711524117.json  6f52c716f6aa4aa2.json  70298386e96e4960.json  71ebd4db98b78de9.json  75369aa951c5698a.json  77264f1f601c9612.json  77b931bd6d3850a6.json  7dd490119fdf3695.json  7f7fa6a3fc5ff59b.json  832a24330559587c.json  (+43 more)
scripts/: setup_env.sh
slurm/: bench.sbatch  quality.sbatch
src/vob/: __init__.py  analyze.py  cli.py  matrix.py  metrics.py  quality.py  runner.py  server.py  store.py  telemetry.py
tests/: test_matrix.py  test_metrics.py  test_store.py
